--- a/Assets/GoogleService-Info.plist
+++ b/Assets/GoogleService-Info.plist
@@ -30,5 +30,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:740127573991:ios:0054d2fd8838184f6b5f42</string>
+	<key>DATABASE_URL</key>
+	<string>https://notion-unity-example.firebaseio.com</string>
 </dict>
 </plist>
